# OwnershipMonad

./: .gitignore  README.md  move_semantics.tex
dsl-project/OwnershipMonad/: .gitignore  LICENSE  OwnershipMonad.cabal  README.txt
dsl-project/OwnershipMonad/app/: Main.hs
dsl-project/OwnershipMonad/src/: LibDataMap.hs  LibHashTable.hs
memory_profiling/: copy_mem_test  copy_mem_test.rs
memory_profiling/scoped_threads_mem_test/: .gitignore  Cargo.toml
memory_profiling/scoped_threads_mem_test/src/: main.rs
ochan/: .gitignore  CHANGELOG.md  README.md  README.org  ochan.cabal  package.yaml  stack.yaml
ochan/app/: Main.hs
ochan/src/Control/Concurrent/: OChan.hs
ochan/test/: Main.hs  Spec.hs
oref/: .gitignore  CHANGELOG.md  LICENSE  README.md  README.org  oref.cabal  package.yaml  shell.nix  stack.yaml
oref/src/Data/: ORef.hs
oref/src/Data/ORef/: Internal.hs
oref/test/: Main.hs
ownership_examples/: .gitignore  channels  channels.rs  dining_philosophers.rs  example0  example0.rs  example1  example1.rs  example2  example2.rs  example3.rs  example4  example4.rs
paper/: ]  ownership_monad.bib  ownership_monad.tex
paper/auto/: ownership_monad.el
paper/move_semantics/: move_semantics.tex
paper/ownership_monad/: '  .gitignore  ownership_monad.bib  ownership_monad.blg  ownership_monad.tex  ownership_monad.toc
paper/ownership_monad/auto/: ownership_monad.el
