name:                ochan
version:             0.1.0.0
synopsis:            Owned channels
description:         Resource tracking channels
homepage:            https://github.com/lambda-land/OwnershipMonad/blob/master/ochan#readme
license:             BSD3
license-file:        LICENSE
author:              Mike McGirr
maintainer:          mcgirrm@oregonstate.edu
copyright:           2017 Mike McGirr
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ochan-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ochan
  default-language:    Haskell2010

test-suite ochan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ochan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lambda-land/OwnershipMonad
