name:          oref
version:       0.0.0
license:       BSD3
author:        Eric Walkingshaw
maintainer:    walkiner@oregonstate.edu
category:      Data
build-type:    Simple
cabal-version: >= 1.22

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -W -Wredundant-constraints
  default-extensions:
    ExistentialQuantification
  build-depends:
    base,
    containers,
    mtl
  exposed-modules:
    Data.ORef
